--- a/NAMESPACE
+++ b/NAMESPACE
@@ -190,6 +190,9 @@ export(var_lm)
 export(vhar_lm)
 importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
+importFrom(bayesplot,mcmc_areas)
+importFrom(bayesplot,mcmc_dens)
+importFrom(bayesplot,mcmc_trace)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
@@ -207,11 +210,9 @@ importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
-importFrom(ggplot2,geom_density)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_path)
 importFrom(ggplot2,geom_point)
-importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggplot_build)
 importFrom(ggplot2,labs)
@@ -241,8 +242,6 @@ importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(tibble,add_column)
-importFrom(tibble,rownames_to_column)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,separate)
-importFrom(utils,str)
 useDynLib(bvhar, .registration = TRUE)
