--- a/NAMESPACE
+++ b/NAMESPACE
@@ -221,6 +221,7 @@ importFrom(ggplot2,layer)
 importFrom(ggplot2,scale_colour_viridis_d)
 importFrom(ggplot2,scale_fill_viridis_d)
 importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,vars)
 importFrom(lifecycle,deprecate_soft)
 importFrom(lifecycle,deprecate_warn)
 importFrom(lifecycle,deprecated)
@@ -244,4 +245,5 @@ importFrom(stats,setNames)
 importFrom(tibble,add_column)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,separate)
+importFrom(tidyr,unite)
 useDynLib(bvhar, .registration = TRUE)
