--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,12 +67,14 @@ S3method(print,boundbvharemp)
 S3method(print,bvarflat)
 S3method(print,bvarhm)
 S3method(print,bvarmn)
+S3method(print,bvarsv)
 S3method(print,bvharcv)
 S3method(print,bvharemp)
 S3method(print,bvharirf)
 S3method(print,bvharmn)
 S3method(print,bvharpriorspec)
 S3method(print,bvharspec)
+S3method(print,bvharsv)
 S3method(print,predbvhar)
 S3method(print,summary.normaliw)
 S3method(print,summary.varlse)
@@ -117,7 +119,9 @@ export(bound_bvhar)
 export(bvar_flat)
 export(bvar_minnesota)
 export(bvar_niwhm)
+export(bvar_sv)
 export(bvhar_minnesota)
+export(bvhar_sv)
 export(choose_bayes)
 export(choose_bvar)
 export(choose_bvhar)
@@ -146,12 +150,14 @@ export(knit_print.boundbvharemp)
 export(knit_print.bvarflat)
 export(knit_print.bvarhm)
 export(knit_print.bvarmn)
+export(knit_print.bvarsv)
 export(knit_print.bvharcv)
 export(knit_print.bvharemp)
 export(knit_print.bvharirf)
 export(knit_print.bvharmn)
 export(knit_print.bvharpriorspec)
 export(knit_print.bvharspec)
+export(knit_print.bvharsv)
 export(knit_print.predbvhar)
 export(knit_print.summary.normaliw)
 export(knit_print.summary.varlse)
