ad hoc forecasting function in sv models

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,7 +60,9 @@ S3method(mse,bvharcv)
 S3method(mse,predbvhar)
 S3method(predict,bvarflat)
 S3method(predict,bvarmn)
+S3method(predict,bvarsv)
 S3method(predict,bvharmn)
+S3method(predict,bvharsv)
 S3method(predict,varlse)
 S3method(predict,vharlse)
 S3method(print,boundbvharemp)
