--- a/NAMESPACE
+++ b/NAMESPACE
@@ -252,6 +252,7 @@ importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(tibble,add_column)
 importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate)
 importFrom(tidyr,unite)
 useDynLib(bvhar, .registration = TRUE)
