--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,8 +74,8 @@ S3method(predict,bvarflat)
 S3method(predict,bvarhs)
 S3method(predict,bvarmn)
 S3method(predict,bvarssvs)
-S3method(predict,bvharhs)
 S3method(predict,bvarsv)
+S3method(predict,bvharhs)
 S3method(predict,bvharmn)
 S3method(predict,bvharssvs)
 S3method(predict,bvharsv)
@@ -96,8 +96,8 @@ S3method(print,bvharmn)
 S3method(print,bvharpriorspec)
 S3method(print,bvharspec)
 S3method(print,bvharssvs)
-S3method(print,horseshoespec)
 S3method(print,bvharsv)
+S3method(print,horseshoespec)
 S3method(print,predbvhar)
 S3method(print,ssvsinit)
 S3method(print,ssvsinput)
@@ -152,8 +152,8 @@ export(bvar_horseshoe)
 export(bvar_minnesota)
 export(bvar_niwhm)
 export(bvar_ssvs)
-export(bvhar_horseshoe)
 export(bvar_sv)
+export(bvhar_horseshoe)
 export(bvhar_minnesota)
 export(bvhar_ssvs)
 export(bvhar_sv)
@@ -208,8 +208,8 @@ export(knit_print.bvharmn)
 export(knit_print.bvharpriorspec)
 export(knit_print.bvharspec)
 export(knit_print.bvharssvs)
-export(knit_print.horseshoespec)
 export(knit_print.bvharsv)
+export(knit_print.horseshoespec)
 export(knit_print.predbvhar)
 export(knit_print.ssvsinit)
 export(knit_print.ssvsinput)
@@ -288,7 +288,6 @@ importFrom(ggplot2,geom_path)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,geom_tile)
-importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggplot_build)
 importFrom(ggplot2,labs)
@@ -297,8 +296,8 @@ importFrom(ggplot2,layer)
 importFrom(ggplot2,scale_colour_viridis_d)
 importFrom(ggplot2,scale_fill_viridis_d)
 importFrom(ggplot2,scale_x_continuous)
-importFrom(ggplot2,vars)
 importFrom(ggplot2,scale_x_discrete)
+importFrom(ggplot2,vars)
 importFrom(lifecycle,deprecate_soft)
 importFrom(lifecycle,deprecate_warn)
 importFrom(lifecycle,deprecated)
@@ -327,10 +326,10 @@ importFrom(stats,rnorm)
 importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(tibble,add_column)
+importFrom(tibble,rownames_to_column)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate)
 importFrom(tidyr,separate_wider_delim)
-importFrom(utils,str)
 importFrom(tidyr,unite)
 useDynLib(bvhar, .registration = TRUE)
