--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,9 +70,11 @@ S3method(mrae,predbvhar)
 S3method(mse,bvharcv)
 S3method(mse,predbvhar)
 S3method(predict,bvarflat)
+S3method(predict,bvarhs)
 S3method(predict,bvarmn)
 S3method(predict,bvarssvs)
 S3method(predict,bvarsv)
+S3method(predict,bvharhs)
 S3method(predict,bvharmn)
 S3method(predict,bvharssvs)
 S3method(predict,bvharsv)
@@ -81,20 +83,24 @@ S3method(predict,vharlse)
 S3method(print,boundbvharemp)
 S3method(print,bvarflat)
 S3method(print,bvarhm)
+S3method(print,bvarhs)
 S3method(print,bvarmn)
 S3method(print,bvarssvs)
 S3method(print,bvarsv)
 S3method(print,bvharcv)
 S3method(print,bvharemp)
+S3method(print,bvharhs)
 S3method(print,bvharirf)
 S3method(print,bvharmn)
 S3method(print,bvharpriorspec)
 S3method(print,bvharspec)
 S3method(print,bvharssvs)
 S3method(print,bvharsv)
+S3method(print,horseshoespec)
 S3method(print,predbvhar)
 S3method(print,ssvsinit)
 S3method(print,ssvsinput)
+S3method(print,summary.hsmod)
 S3method(print,summary.normaliw)
 S3method(print,summary.ssvsmod)
 S3method(print,summary.varlse)
@@ -125,6 +131,7 @@ S3method(stableroot,bvarmn)
 S3method(stableroot,bvharmn)
 S3method(stableroot,varlse)
 S3method(stableroot,vharlse)
+S3method(summary,hsmod)
 S3method(summary,normaliw)
 S3method(summary,ssvsmod)
 S3method(summary,varlse)
@@ -140,10 +147,12 @@ export(autolayer)
 export(autoplot)
 export(bound_bvhar)
 export(bvar_flat)
+export(bvar_horseshoe)
 export(bvar_minnesota)
 export(bvar_niwhm)
 export(bvar_ssvs)
 export(bvar_sv)
+export(bvhar_horseshoe)
 export(bvhar_minnesota)
 export(bvhar_ssvs)
 export(bvhar_sv)
@@ -176,6 +185,7 @@ export(is.bvharemp)
 export(is.bvharmn)
 export(is.bvharpriorspec)
 export(is.bvharspec)
+export(is.horseshoespec)
 export(is.predbvhar)
 export(is.ssvsinit)
 export(is.ssvsinput)
@@ -185,20 +195,24 @@ export(is.vharlse)
 export(knit_print.boundbvharemp)
 export(knit_print.bvarflat)
 export(knit_print.bvarhm)
+export(knit_print.bvarhs)
 export(knit_print.bvarmn)
 export(knit_print.bvarssvs)
 export(knit_print.bvarsv)
 export(knit_print.bvharcv)
 export(knit_print.bvharemp)
+export(knit_print.bvharhs)
 export(knit_print.bvharirf)
 export(knit_print.bvharmn)
 export(knit_print.bvharpriorspec)
 export(knit_print.bvharspec)
 export(knit_print.bvharssvs)
 export(knit_print.bvharsv)
+export(knit_print.horseshoespec)
 export(knit_print.predbvhar)
 export(knit_print.ssvsinit)
 export(knit_print.ssvsinput)
+export(knit_print.summary.hsmod)
 export(knit_print.summary.normaliw)
 export(knit_print.summary.ssvsmod)
 export(knit_print.summary.varlse)
@@ -219,6 +233,7 @@ export(rmsfe)
 export(set_bvar)
 export(set_bvar_flat)
 export(set_bvhar)
+export(set_horseshoe)
 export(set_lambda)
 export(set_psi)
 export(set_ssvs)
@@ -252,6 +267,7 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
+importFrom(dplyr,rename)
 importFrom(forcats,fct_rev)
 importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
@@ -287,10 +303,13 @@ importFrom(optimParallel,optimParallel)
 importFrom(posterior,as_draws_df)
 importFrom(posterior,as_draws_matrix)
 importFrom(posterior,bind_draws)
+importFrom(posterior,subset_draws)
+importFrom(posterior,summarise_draws)
 importFrom(purrr,reduce)
 importFrom(stats,AIC)
 importFrom(stats,BIC)
 importFrom(stats,cor)
+importFrom(stats,cov)
 importFrom(stats,logLik)
 importFrom(stats,nobs)
 importFrom(stats,optim)
