add lpl eval method for predsv

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ S3method(logLik,bvarmn)
 S3method(logLik,bvharmn)
 S3method(logLik,varlse)
 S3method(logLik,vharlse)
+S3method(lpl,predsv)
 S3method(mae,bvharcv)
 S3method(mae,predbvhar)
 S3method(mape,bvharcv)
@@ -219,6 +220,7 @@ export(knit_print.summary.varlse)
 export(knit_print.summary.vharlse)
 export(knit_print.varlse)
 export(knit_print.vharlse)
+export(lpl)
 export(mae)
 export(mape)
 export(mase)
