keep the order of variable names in coef heatmap using factor

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,8 +42,7 @@ Imports:
     optimParallel,
     posterior,
     bayesplot,
-    doRNG,
-    forcats
+    doRNG
 LinkingTo: 
     Rcpp,
     RcppEigen,
