--- a/NAMESPACE
+++ b/NAMESPACE
@@ -240,6 +240,8 @@ export(set_lambda)
 export(set_psi)
 export(set_ssvs)
 export(set_weight_bvhar)
+export(sim_horseshoe_var)
+export(sim_horseshoe_vhar)
 export(sim_iw)
 export(sim_matgaussian)
 export(sim_mgaussian)
