give connectedness table with spillover

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,12 +95,14 @@ S3method(print,bvharirf)
 S3method(print,bvharmn)
 S3method(print,bvharpriorspec)
 S3method(print,bvharspec)
+S3method(print,bvharspillover)
 S3method(print,bvharssvs)
 S3method(print,bvharsv)
 S3method(print,horseshoespec)
 S3method(print,predbvhar)
 S3method(print,ssvsinit)
 S3method(print,ssvsinput)
+S3method(print,summary.bvharspillover)
 S3method(print,summary.hsmod)
 S3method(print,summary.normaliw)
 S3method(print,summary.ssvsmod)
@@ -132,11 +134,13 @@ S3method(stableroot,bvarmn)
 S3method(stableroot,bvharmn)
 S3method(stableroot,varlse)
 S3method(stableroot,vharlse)
+S3method(summary,bvharspillover)
 S3method(summary,hsmod)
 S3method(summary,normaliw)
 S3method(summary,ssvsmod)
 S3method(summary,varlse)
 S3method(summary,vharlse)
+S3method(varshares,bvharmod)
 export("%>%")
 export()
 export(FPE)
@@ -207,12 +211,14 @@ export(knit_print.bvharirf)
 export(knit_print.bvharmn)
 export(knit_print.bvharpriorspec)
 export(knit_print.bvharspec)
+export(knit_print.bvharspillover)
 export(knit_print.bvharssvs)
 export(knit_print.bvharsv)
 export(knit_print.horseshoespec)
 export(knit_print.predbvhar)
 export(knit_print.ssvsinit)
 export(knit_print.ssvsinput)
+export(knit_print.summary.bvharspillover)
 export(knit_print.summary.hsmod)
 export(knit_print.summary.normaliw)
 export(knit_print.summary.ssvsmod)
@@ -258,6 +264,7 @@ export(split_coef)
 export(spne)
 export(stableroot)
 export(var_lm)
+export(varshares)
 export(vhar_lm)
 importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
