change spillover function name

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,6 +126,7 @@ S3method(rmase,bvharcv)
 S3method(rmase,predbvhar)
 S3method(rmsfe,bvharcv)
 S3method(rmsfe,predbvhar)
+S3method(spillover_volatility,bvharmod)
 S3method(split_coef,bvharirf)
 S3method(split_coef,bvharmod)
 S3method(spne,bvharsp)
@@ -140,7 +141,6 @@ S3method(summary,normaliw)
 S3method(summary,ssvsmod)
 S3method(summary,varlse)
 S3method(summary,vharlse)
-S3method(varshares,bvharmod)
 export("%>%")
 export()
 export(FPE)
@@ -260,11 +260,11 @@ export(sim_ssvs_var)
 export(sim_ssvs_vhar)
 export(sim_var)
 export(sim_vhar)
+export(spillover_volatility)
 export(split_coef)
 export(spne)
 export(stableroot)
 export(var_lm)
-export(varshares)
 export(vhar_lm)
 importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
