use one function for print of summary bvharsp

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,9 +101,8 @@ S3method(print,horseshoespec)
 S3method(print,predbvhar)
 S3method(print,ssvsinit)
 S3method(print,ssvsinput)
-S3method(print,summary.hsmod)
+S3method(print,summary.bvharsp)
 S3method(print,summary.normaliw)
-S3method(print,summary.ssvsmod)
 S3method(print,summary.varlse)
 S3method(print,summary.vharlse)
 S3method(print,varlse)
@@ -212,9 +211,8 @@ export(knit_print.horseshoespec)
 export(knit_print.predbvhar)
 export(knit_print.ssvsinit)
 export(knit_print.ssvsinput)
-export(knit_print.summary.hsmod)
+export(knit_print.summary.bvharsp)
 export(knit_print.summary.normaliw)
-export(knit_print.summary.ssvsmod)
 export(knit_print.summary.varlse)
 export(knit_print.summary.vharlse)
 export(knit_print.varlse)
