--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,27 @@ S3method(is.stable,bvarmn)
 S3method(is.stable,bvharmn)
 S3method(is.stable,varlse)
 S3method(is.stable,vharlse)
+S3method(knitr::knit_print,boundbvharemp)
+S3method(knitr::knit_print,bvarflat)
+S3method(knitr::knit_print,bvarhm)
+S3method(knitr::knit_print,bvarmn)
+S3method(knitr::knit_print,bvarssvs)
+S3method(knitr::knit_print,bvharcv)
+S3method(knitr::knit_print,bvharemp)
+S3method(knitr::knit_print,bvharirf)
+S3method(knitr::knit_print,bvharmn)
+S3method(knitr::knit_print,bvharpriorspec)
+S3method(knitr::knit_print,bvharspec)
+S3method(knitr::knit_print,bvharssvs)
+S3method(knitr::knit_print,predbvhar)
+S3method(knitr::knit_print,ssvsinit)
+S3method(knitr::knit_print,ssvsinput)
+S3method(knitr::knit_print,summary.normaliw)
+S3method(knitr::knit_print,summary.ssvsmod)
+S3method(knitr::knit_print,summary.varlse)
+S3method(knitr::knit_print,summary.vharlse)
+S3method(knitr::knit_print,varlse)
+S3method(knitr::knit_print,vharlse)
 S3method(logLik,bvarflat)
 S3method(logLik,bvarmn)
 S3method(logLik,bvharmn)
@@ -130,7 +151,6 @@ S3method(summary,ssvsmod)
 S3method(summary,varlse)
 S3method(summary,vharlse)
 export("%>%")
-export()
 export(FPE)
 export(HQ)
 export(VARtoVMA)
@@ -181,29 +201,8 @@ export(is.ssvsinput)
 export(is.stable)
 export(is.varlse)
 export(is.vharlse)
-export(knit_print.boundbvharemp)
-export(knit_print.bvarflat)
-export(knit_print.bvarhm)
-export(knit_print.bvarmn)
-export(knit_print.bvarssvs)
 export(knit_print.bvarsv)
-export(knit_print.bvharcv)
-export(knit_print.bvharemp)
-export(knit_print.bvharirf)
-export(knit_print.bvharmn)
-export(knit_print.bvharpriorspec)
-export(knit_print.bvharspec)
-export(knit_print.bvharssvs)
 export(knit_print.bvharsv)
-export(knit_print.predbvhar)
-export(knit_print.ssvsinit)
-export(knit_print.ssvsinput)
-export(knit_print.summary.normaliw)
-export(knit_print.summary.ssvsmod)
-export(knit_print.summary.varlse)
-export(knit_print.summary.vharlse)
-export(knit_print.varlse)
-export(knit_print.vharlse)
 export(mae)
 export(mape)
 export(mase)
