--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -198,3 +198,5 @@ news:
     href: https://github.com/ygeunkim/bvhar/releases/tag/v1.0.0
   - text: "Version 1.0.1"
     href: https://github.com/ygeunkim/bvhar/releases/tag/v1.0.1
+  - text: "Version 1.0.2"
+    href: https://github.com/ygeunkim/bvhar/releases/tag/v1.0.2
