can model hierarchically for bvhar-s

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,7 +56,6 @@ S3method(is.stable,varlse)
 S3method(is.stable,vharlse)
 S3method(knitr::knit_print,boundbvharemp)
 S3method(knitr::knit_print,bvarflat)
-S3method(knitr::knit_print,bvarhm)
 S3method(knitr::knit_print,bvarhs)
 S3method(knitr::knit_print,bvarmn)
 S3method(knitr::knit_print,bvarssvs)
@@ -70,6 +69,7 @@ S3method(knitr::knit_print,bvharpriorspec)
 S3method(knitr::knit_print,bvharspec)
 S3method(knitr::knit_print,bvharssvs)
 S3method(knitr::knit_print,bvharsv)
+S3method(knitr::knit_print,hmnmod)
 S3method(knitr::knit_print,horseshoespec)
 S3method(knitr::knit_print,predbvhar)
 S3method(knitr::knit_print,ssvsinit)
@@ -109,7 +109,6 @@ S3method(predict,varlse)
 S3method(predict,vharlse)
 S3method(print,boundbvharemp)
 S3method(print,bvarflat)
-S3method(print,bvarhm)
 S3method(print,bvarhs)
 S3method(print,bvarmn)
 S3method(print,bvarssvs)
@@ -123,6 +122,7 @@ S3method(print,bvharpriorspec)
 S3method(print,bvharspec)
 S3method(print,bvharssvs)
 S3method(print,bvharsv)
+S3method(print,hmnmod)
 S3method(print,horseshoespec)
 S3method(print,predbvhar)
 S3method(print,ssvsinit)
