--- a/NAMESPACE
+++ b/NAMESPACE
@@ -128,8 +128,8 @@ S3method(print,horseshoespec)
 S3method(print,predbvhar)
 S3method(print,ssvsinit)
 S3method(print,ssvsinput)
-S3method(print,summary.bvharspillover)
 S3method(print,summary.bvharsp)
+S3method(print,summary.bvharspillover)
 S3method(print,summary.normaliw)
 S3method(print,summary.varlse)
 S3method(print,summary.vharlse)
@@ -167,6 +167,7 @@ S3method(summary,ssvsmod)
 S3method(summary,varlse)
 S3method(summary,vharlse)
 export("%>%")
+export()
 export(FPE)
 export(HQ)
 export(VARtoVMA)
@@ -220,6 +221,8 @@ export(is.ssvsinput)
 export(is.stable)
 export(is.varlse)
 export(is.vharlse)
+export(knit_print.bvharspillover)
+export(knit_print.summary.bvharspillover)
 export(lpl)
 export(mae)
 export(mape)
