--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,8 +18,6 @@ S3method(HQ,bvharmn)
 S3method(HQ,logLik)
 S3method(HQ,varlse)
 S3method(HQ,vharlse)
-S3method(analyze_ir,varlse)
-S3method(analyze_ir,vharlse)
 S3method(autolayer,predbvhar)
 S3method(autoplot,bvharirf)
 S3method(autoplot,bvharsp)
@@ -49,6 +47,8 @@ S3method(fitted,bvharmn)
 S3method(fitted,varlse)
 S3method(fitted,vharlse)
 S3method(fromse,bvharsp)
+S3method(irf,varlse)
+S3method(irf,vharlse)
 S3method(is.stable,bvarflat)
 S3method(is.stable,bvarmn)
 S3method(is.stable,bvharmn)
@@ -151,7 +151,7 @@ S3method(rmase,bvharcv)
 S3method(rmase,predbvhar)
 S3method(rmsfe,bvharcv)
 S3method(rmsfe,predbvhar)
-S3method(spillover_volatility,bvharmod)
+S3method(spillover,bvharmod)
 S3method(split_coef,bvharirf)
 S3method(split_coef,bvharmod)
 S3method(spne,bvharsp)
@@ -172,7 +172,6 @@ export(FPE)
 export(HQ)
 export(VARtoVMA)
 export(VHARtoVMA)
-export(analyze_ir)
 export(autolayer)
 export(autoplot)
 export(bound_bvhar)
@@ -206,6 +205,7 @@ export(fromse)
 export(geom_eval)
 export(gg_loss)
 export(init_ssvs)
+export(irf)
 export(is.boundbvharemp)
 export(is.bvarflat)
 export(is.bvarmn)
@@ -256,7 +256,7 @@ export(sim_ssvs_var)
 export(sim_ssvs_vhar)
 export(sim_var)
 export(sim_vhar)
-export(spillover_volatility)
+export(spillover)
 export(split_coef)
 export(spne)
 export(stableroot)
