--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,8 +43,7 @@ Imports:
     doRNG
 LinkingTo: 
     Rcpp,
-    RcppEigen,
-    RcppProgress
+    RcppEigen
 VignetteBuilder: knitr
 Depends: 
     R (>= 3.6.0)
