make tvp models functions work temporarily

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -177,10 +177,12 @@ export(bvar_minnesota)
 export(bvar_niwhm)
 export(bvar_ssvs)
 export(bvar_sv)
+export(bvar_tvp)
 export(bvhar_horseshoe)
 export(bvhar_minnesota)
 export(bvhar_ssvs)
 export(bvhar_sv)
+export(bvhar_tvp)
 export(choose_bayes)
 export(choose_bvar)
 export(choose_bvhar)
