--- a/NAMESPACE
+++ b/NAMESPACE
@@ -214,6 +214,7 @@ export(is.predbvhar)
 export(is.ssvsinit)
 export(is.ssvsinput)
 export(is.stable)
+export(is.svspec)
 export(is.varlse)
 export(is.vharlse)
 export(lpl)
@@ -235,6 +236,7 @@ export(set_horseshoe)
 export(set_lambda)
 export(set_psi)
 export(set_ssvs)
+export(set_sv)
 export(set_weight_bvhar)
 export(sim_horseshoe_var)
 export(sim_horseshoe_vhar)
