use sv_spec in sv estimation functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -131,6 +131,7 @@ S3method(print,summary.bvharsp)
 S3method(print,summary.normaliw)
 S3method(print,summary.varlse)
 S3method(print,summary.vharlse)
+S3method(print,svspec)
 S3method(print,varlse)
 S3method(print,vharlse)
 S3method(relmae,bvharcv)
