add random and constant initializer

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,12 +72,14 @@ S3method(knitr::knit_print,bvharssvs)
 S3method(knitr::knit_print,bvharsv)
 S3method(knitr::knit_print,horseshoespec)
 S3method(knitr::knit_print,predbvhar)
+S3method(knitr::knit_print,sclinit)
 S3method(knitr::knit_print,ssvsinit)
 S3method(knitr::knit_print,ssvsinput)
 S3method(knitr::knit_print,summary.normaliw)
 S3method(knitr::knit_print,summary.ssvsmod)
 S3method(knitr::knit_print,summary.varlse)
 S3method(knitr::knit_print,summary.vharlse)
+S3method(knitr::knit_print,unifinit)
 S3method(knitr::knit_print,varlse)
 S3method(knitr::knit_print,vharlse)
 S3method(logLik,bvarflat)
@@ -125,6 +127,7 @@ S3method(print,bvharssvs)
 S3method(print,bvharsv)
 S3method(print,horseshoespec)
 S3method(print,predbvhar)
+S3method(print,sclinit)
 S3method(print,ssvsinit)
 S3method(print,ssvsinput)
 S3method(print,summary.bvharsp)
@@ -132,6 +135,7 @@ S3method(print,summary.normaliw)
 S3method(print,summary.varlse)
 S3method(print,summary.vharlse)
 S3method(print,svspec)
+S3method(print,unifinit)
 S3method(print,varlse)
 S3method(print,vharlse)
 S3method(relmae,bvharcv)
@@ -201,7 +205,9 @@ export(forecast_roll)
 export(fromse)
 export(geom_eval)
 export(gg_loss)
+export(init_const)
 export(init_ssvs)
+export(init_unif)
 export(is.boundbvharemp)
 export(is.bvarflat)
 export(is.bvarmn)
@@ -211,11 +217,14 @@ export(is.bvharmn)
 export(is.bvharpriorspec)
 export(is.bvharspec)
 export(is.horseshoespec)
+export(is.paraminit)
 export(is.predbvhar)
+export(is.sclinit)
 export(is.ssvsinit)
 export(is.ssvsinput)
 export(is.stable)
 export(is.svspec)
+export(is.unifinit)
 export(is.varlse)
 export(is.vharlse)
 export(lpl)
@@ -261,7 +270,6 @@ importFrom(Rcpp,evalCpp)
 importFrom(bayesplot,mcmc_areas)
 importFrom(bayesplot,mcmc_dens)
 importFrom(bayesplot,mcmc_trace)
-importFrom(doRNG,"%dorng%")
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
@@ -273,7 +281,6 @@ importFrom(dplyr,rename)
 importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
-importFrom(foreach,getDoParRegistered)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,autolayer)
 importFrom(ggplot2,autoplot)
@@ -322,6 +329,7 @@ importFrom(stats,quantile)
 importFrom(stats,rbinom)
 importFrom(stats,rgamma)
 importFrom(stats,rnorm)
+importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(tibble,add_column)
