add parameters specification function for sv model

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -134,6 +134,7 @@ S3method(print,summary.bvharsp)
 S3method(print,summary.normaliw)
 S3method(print,summary.varlse)
 S3method(print,summary.vharlse)
+S3method(print,svinit)
 S3method(print,svspec)
 S3method(print,unifinit)
 S3method(print,varlse)
@@ -207,6 +208,7 @@ export(geom_eval)
 export(gg_loss)
 export(init_const)
 export(init_ssvs)
+export(init_sv)
 export(init_unif)
 export(is.boundbvharemp)
 export(is.bvarflat)
@@ -223,6 +225,7 @@ export(is.sclinit)
 export(is.ssvsinit)
 export(is.ssvsinput)
 export(is.stable)
+export(is.svinit)
 export(is.svspec)
 export(is.unifinit)
 export(is.varlse)
