add parameter auto initialization function for sv model

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -191,6 +191,7 @@ export(choose_bayes)
 export(choose_bvar)
 export(choose_bvhar)
 export(choose_ssvs)
+export(choose_sv)
 export(choose_var)
 export(compute_dic)
 export(compute_logml)
