change ssvsinput class name to ssvsspec

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,7 +74,7 @@ S3method(knitr::knit_print,horseshoespec)
 S3method(knitr::knit_print,predbvhar)
 S3method(knitr::knit_print,sclinit)
 S3method(knitr::knit_print,ssvsinit)
-S3method(knitr::knit_print,ssvsinput)
+S3method(knitr::knit_print,ssvsspec)
 S3method(knitr::knit_print,summary.normaliw)
 S3method(knitr::knit_print,summary.ssvsmod)
 S3method(knitr::knit_print,summary.varlse)
@@ -129,7 +129,7 @@ S3method(print,horseshoespec)
 S3method(print,predbvhar)
 S3method(print,sclinit)
 S3method(print,ssvsinit)
-S3method(print,ssvsinput)
+S3method(print,ssvsspec)
 S3method(print,summary.bvharsp)
 S3method(print,summary.normaliw)
 S3method(print,summary.varlse)
@@ -224,7 +224,7 @@ export(is.paraminit)
 export(is.predbvhar)
 export(is.sclinit)
 export(is.ssvsinit)
-export(is.ssvsinput)
+export(is.ssvsspec)
 export(is.stable)
 export(is.svinit)
 export(is.svspec)
