add init spec option in sv r functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ S3method(knitr::knit_print,bvharspec)
 S3method(knitr::knit_print,bvharssvs)
 S3method(knitr::knit_print,bvharsv)
 S3method(knitr::knit_print,horseshoespec)
+S3method(knitr::knit_print,hsinit)
 S3method(knitr::knit_print,predbvhar)
 S3method(knitr::knit_print,sclinit)
 S3method(knitr::knit_print,ssvsinit)
@@ -126,6 +127,7 @@ S3method(print,bvharspec)
 S3method(print,bvharssvs)
 S3method(print,bvharsv)
 S3method(print,horseshoespec)
+S3method(print,hsinit)
 S3method(print,predbvhar)
 S3method(print,sclinit)
 S3method(print,ssvsinit)
@@ -208,6 +210,7 @@ export(fromse)
 export(geom_eval)
 export(gg_loss)
 export(init_const)
+export(init_horseshoe)
 export(init_ssvs)
 export(init_sv)
 export(init_unif)
@@ -219,7 +222,9 @@ export(is.bvharemp)
 export(is.bvharmn)
 export(is.bvharpriorspec)
 export(is.bvharspec)
+export(is.coefinit)
 export(is.horseshoespec)
+export(is.hsinit)
 export(is.paraminit)
 export(is.predbvhar)
 export(is.sclinit)
