add error case in prior and init specs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,8 +70,8 @@ S3method(knitr::knit_print,bvharpriorspec)
 S3method(knitr::knit_print,bvharspec)
 S3method(knitr::knit_print,bvharssvs)
 S3method(knitr::knit_print,bvharsv)
+S3method(knitr::knit_print,horseshoeinit)
 S3method(knitr::knit_print,horseshoespec)
-S3method(knitr::knit_print,hsinit)
 S3method(knitr::knit_print,predbvhar)
 S3method(knitr::knit_print,sclinit)
 S3method(knitr::knit_print,ssvsinit)
@@ -126,8 +126,8 @@ S3method(print,bvharpriorspec)
 S3method(print,bvharspec)
 S3method(print,bvharssvs)
 S3method(print,bvharsv)
+S3method(print,horseshoeinit)
 S3method(print,horseshoespec)
-S3method(print,hsinit)
 S3method(print,predbvhar)
 S3method(print,sclinit)
 S3method(print,ssvsinit)
@@ -223,8 +223,8 @@ export(is.bvharmn)
 export(is.bvharpriorspec)
 export(is.bvharspec)
 export(is.coefinit)
+export(is.horseshoeinit)
 export(is.horseshoespec)
-export(is.hsinit)
 export(is.paraminit)
 export(is.predbvhar)
 export(is.sclinit)
