--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -211,5 +211,5 @@ news:
     href: https://github.com/ygeunkim/bvhar/releases/tag/v1.1.0
   - text: "Version 1.2.0"
     href: https://github.com/ygeunkim/bvhar/releases/tag/v1.2.0
-  # - text: "Version 2.0.0"
-  #   href: https://github.com/ygeunkim/bvhar/releases/tag/v2.0.0
+  - text: "Version 2.0.0"
+    href: https://github.com/ygeunkim/bvhar/releases/tag/v2.0.0
