return directional in spillover function and start to make dynamic sp R function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,8 @@ S3method(conf_fscore,summary.bvharsp)
 S3method(conf_prec,summary.bvharsp)
 S3method(conf_recall,summary.bvharsp)
 S3method(confusion,summary.bvharsp)
+S3method(dynamic_spillover,bvharmod)
+S3method(dynamic_spillover,svmod)
 S3method(fitted,bvarflat)
 S3method(fitted,bvarmn)
 S3method(fitted,bvharmn)
@@ -134,7 +136,6 @@ S3method(print,predbvhar)
 S3method(print,ssvsinit)
 S3method(print,ssvsinput)
 S3method(print,summary.bvharsp)
-S3method(print,summary.bvharspillover)
 S3method(print,summary.normaliw)
 S3method(print,summary.varlse)
 S3method(print,summary.vharlse)
@@ -166,7 +167,6 @@ S3method(stableroot,bvarmn)
 S3method(stableroot,bvharmn)
 S3method(stableroot,varlse)
 S3method(stableroot,vharlse)
-S3method(summary,bvharspillover)
 S3method(summary,hsmod)
 S3method(summary,normaliw)
 S3method(summary,ssvsmod)
@@ -204,6 +204,7 @@ export(conf_prec)
 export(conf_recall)
 export(confusion)
 export(divide_ts)
+export(dynamic_spillover)
 export(forecast_expand)
 export(forecast_roll)
 export(fromse)
@@ -229,7 +230,6 @@ export(is.svspec)
 export(is.varlse)
 export(is.vharlse)
 export(knit_print.bvharspillover)
-export(knit_print.summary.bvharspillover)
 export(mae)
 export(mape)
 export(mase)
