add print method for dynamic spillover

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,12 +68,14 @@ S3method(knitr::knit_print,bvarmn)
 S3method(knitr::knit_print,bvarssvs)
 S3method(knitr::knit_print,bvarsv)
 S3method(knitr::knit_print,bvharcv)
+S3method(knitr::knit_print,bvhardynsp)
 S3method(knitr::knit_print,bvharemp)
 S3method(knitr::knit_print,bvharhs)
 S3method(knitr::knit_print,bvharirf)
 S3method(knitr::knit_print,bvharmn)
 S3method(knitr::knit_print,bvharpriorspec)
 S3method(knitr::knit_print,bvharspec)
+S3method(knitr::knit_print,bvharspillover)
 S3method(knitr::knit_print,bvharssvs)
 S3method(knitr::knit_print,bvharsv)
 S3method(knitr::knit_print,horseshoespec)
@@ -121,6 +123,7 @@ S3method(print,bvarmn)
 S3method(print,bvarssvs)
 S3method(print,bvarsv)
 S3method(print,bvharcv)
+S3method(print,bvhardynsp)
 S3method(print,bvharemp)
 S3method(print,bvharhs)
 S3method(print,bvharirf)
@@ -229,7 +232,6 @@ export(is.stable)
 export(is.svspec)
 export(is.varlse)
 export(is.vharlse)
-export(knit_print.bvharspillover)
 export(mae)
 export(mape)
 export(mase)
@@ -339,9 +341,11 @@ importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(tibble,add_column)
+importFrom(tibble,as_tibble)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,separate)
 importFrom(tidyr,separate_wider_regex)
 importFrom(tidyr,unite)
+importFrom(utils,head)
 useDynLib(bvhar, .registration = TRUE)
