--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ S3method(HQ,logLik)
 S3method(HQ,varlse)
 S3method(HQ,vharlse)
 S3method(autolayer,predbvhar)
+S3method(autoplot,bvhardynsp)
 S3method(autoplot,bvharirf)
 S3method(autoplot,bvharsp)
 S3method(autoplot,normaliw)
@@ -298,6 +299,7 @@ importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_path)
 importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,geom_tile)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggplot_build)
