tidy model return values

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -219,7 +219,9 @@ export(is.bvarflat)
 export(is.bvarmn)
 export(is.bvharcv)
 export(is.bvharemp)
+export(is.bvharirf)
 export(is.bvharmn)
+export(is.bvharmod)
 export(is.bvharpriorspec)
 export(is.bvharspec)
 export(is.horseshoespec)
@@ -267,7 +269,6 @@ export(sim_ssvs_vhar)
 export(sim_var)
 export(sim_vhar)
 export(spillover)
-export(split_coef)
 export(spne)
 export(stableroot)
 export(var_lm)
