remove model documents

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,8 +84,8 @@ S3method(knitr::knit_print,interceptspec)
 S3method(knitr::knit_print,predbvhar)
 S3method(knitr::knit_print,ssvsinit)
 S3method(knitr::knit_print,ssvsinput)
+S3method(knitr::knit_print,summary.bvharsp)
 S3method(knitr::knit_print,summary.normaliw)
-S3method(knitr::knit_print,summary.ssvsmod)
 S3method(knitr::knit_print,summary.varlse)
 S3method(knitr::knit_print,summary.vharlse)
 S3method(knitr::knit_print,varlse)
