--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -30,6 +30,8 @@ reference:
   - vhar_lm
   - VARtoVMA
   - VHARtoVMA
+  - summary.varlse
+  - summary.vharlse
 
 - title: Prior specification
   desc: >
@@ -56,15 +58,9 @@ reference:
   - bvhar_minnesota
   - bvhar_sv
   - bvhar_ssvs
-  - bvhar_horseshoe  
-
-- title: Summary method
-  desc: ~
-  contents:
-  - summary.varlse
-  - summary.vharlse
+  - bvhar_horseshoe
   - summary.normaliw
-  - summary.ssvsmod
+  - summary.bvharsp  
 
 - title: Forecasting
   desc: ~
@@ -73,6 +69,13 @@ reference:
   - divide_ts
   - forecast_roll
   - forecast_expand
+
+- title: Structural analysis
+  desc: ~
+  contents:
+  - irf
+  - spillover
+  - dynamic_spillover
 
 - title: Evaluation
   desc: ~
@@ -127,6 +130,7 @@ reference:
   - autoplot.bvharirf
   - autoplot.bvharsp
   - autoplot.summary.bvharsp
+  - autoplot.bvhardynsp
 
 - title: Simulation and Random Generation
   desc: ~
@@ -140,6 +144,7 @@ reference:
   - sim_iw
   - sim_mniw
   - sim_mvt
+  - sim_gig
   - sim_ssvs_var
   - sim_horseshoe_var
 
@@ -152,7 +157,6 @@ reference:
 - title: Other generic functions
   desc: ~
   contents:
-  - irf
   - stableroot
   - is.stable
   - coef
