--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ S3method(knitr::knit_print,bvarsv)
 S3method(knitr::knit_print,bvharcv)
 S3method(knitr::knit_print,bvhardynsp)
 S3method(knitr::knit_print,bvharemp)
+S3method(knitr::knit_print,bvharhm)
 S3method(knitr::knit_print,bvharhs)
 S3method(knitr::knit_print,bvharirf)
 S3method(knitr::knit_print,bvharmn)
@@ -85,7 +86,6 @@ S3method(knitr::knit_print,predbvhar)
 S3method(knitr::knit_print,ssvsinit)
 S3method(knitr::knit_print,ssvsinput)
 S3method(knitr::knit_print,summary.bvharsp)
-S3method(knitr::knit_print,summary.normaliw)
 S3method(knitr::knit_print,summary.varlse)
 S3method(knitr::knit_print,summary.vharlse)
 S3method(knitr::knit_print,varlse)
@@ -126,6 +126,7 @@ S3method(print,bvarsv)
 S3method(print,bvharcv)
 S3method(print,bvhardynsp)
 S3method(print,bvharemp)
+S3method(print,bvharhm)
 S3method(print,bvharhs)
 S3method(print,bvharirf)
 S3method(print,bvharmn)
@@ -140,7 +141,6 @@ S3method(print,predbvhar)
 S3method(print,ssvsinit)
 S3method(print,ssvsinput)
 S3method(print,summary.bvharsp)
-S3method(print,summary.normaliw)
 S3method(print,summary.varlse)
 S3method(print,summary.vharlse)
 S3method(print,svspec)
@@ -185,7 +185,6 @@ export(bound_bvhar)
 export(bvar_flat)
 export(bvar_horseshoe)
 export(bvar_minnesota)
-export(bvar_niwhm)
 export(bvar_ssvs)
 export(bvar_sv)
 export(bvhar_horseshoe)
