use conjugate mcmc for minnesota

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,16 +42,19 @@ S3method(conf_fscore,summary.bvharsp)
 S3method(conf_prec,summary.bvharsp)
 S3method(conf_recall,summary.bvharsp)
 S3method(confusion,summary.bvharsp)
-S3method(dynamic_spillover,bvharmod)
+S3method(dynamic_spillover,normaliw)
+S3method(dynamic_spillover,olsmod)
 S3method(dynamic_spillover,svmod)
 S3method(fitted,bvarflat)
 S3method(fitted,bvarmn)
 S3method(fitted,bvharmn)
 S3method(fitted,varlse)
 S3method(fitted,vharlse)
-S3method(forecast_expand,bvharmod)
+S3method(forecast_expand,normaliw)
+S3method(forecast_expand,olsmod)
 S3method(forecast_expand,svmod)
-S3method(forecast_roll,bvharmod)
+S3method(forecast_roll,normaliw)
+S3method(forecast_roll,olsmod)
 S3method(forecast_roll,svmod)
 S3method(fromse,bvharsp)
 S3method(irf,varlse)
@@ -162,7 +165,8 @@ S3method(rmase,bvharcv)
 S3method(rmase,predbvhar)
 S3method(rmsfe,bvharcv)
 S3method(rmsfe,predbvhar)
-S3method(spillover,bvharmod)
+S3method(spillover,normaliw)
+S3method(spillover,olsmod)
 S3method(spne,bvharsp)
 S3method(stableroot,bvarflat)
 S3method(stableroot,bvarmn)
