rolling and expanding window for ldltmod

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,9 +50,11 @@ S3method(fitted,bvarmn)
 S3method(fitted,bvharmn)
 S3method(fitted,varlse)
 S3method(fitted,vharlse)
+S3method(forecast_expand,ldltmod)
 S3method(forecast_expand,normaliw)
 S3method(forecast_expand,olsmod)
 S3method(forecast_expand,svmod)
+S3method(forecast_roll,ldltmod)
 S3method(forecast_roll,normaliw)
 S3method(forecast_roll,olsmod)
 S3method(forecast_roll,svmod)
