--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -43,7 +43,19 @@ jobs:
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
 
+      # - uses: r-lib/actions/setup-r-dependencies@v2
+      #   with:
+      #     extra-packages: any::rcmdcheck
+      #     needs: check
       - uses: r-lib/actions/setup-r-dependencies@v2
+        if: ${{ runner.os == 'Windows' && matrix.config.r == '3.6' }}
+        with:
+          extra-packages: any::rcmdcheck
+          pak-version: rc
+          needs: check
+
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        if: ${{ runner.os != 'Windows' || matrix.config.r != '3.6' }}
         with:
           extra-packages: any::rcmdcheck
           needs: check
@@ -51,10 +63,12 @@ jobs:
 # do not build vignettes in github actions check and ignore warnings
       - uses: r-lib/actions/check-r-package@v2
         with:
-          args: 'c("--no-manual", "--as-cran", "--no-build-vignettes", "--no-tests", "--no-examples")'
-          build_args: '"--no-build-vignettes"'
+          args: 'c("--no-manual", "--as-cran", "--no-build-vignettes", "--no-examples")'
+          build_args: 'c("--no-manual", "--no-build-vignettes")'
           error-on: '"error"'
-          # upload-snapshots: true
+          check-dir: '"check"'
+          upload-snapshots: false
+          upload-results: false
 
 # do not upload artifact until changing to public repo
 # When public repo -> uncomment below
