--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -43,13 +43,25 @@ jobs:
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
       
-      - name: Determine evaluate package version to avoid R version conflict
+      - name: Determine evaluate package version on Windows
+        if: runner.os == 'Windows'
         run: |
-          if [ "${{ matrix.config.r }}" < "4.0.0" ]; then
+          if ($Env:MATRIX_CONFIG_R -lt "4.0.0") {
+            echo "EVALUATE_PKG=evaluate@0.23" >> $Env:GITHUB_ENV
+          } else {
+            echo "EVALUATE_PKG=evaluate" >> $Env:GITHUB_ENV
+           }
+        shell: pwsh
+      
+      - name: Determine evaluate package version on non-Windows
+        if: runner.os != 'Windows'
+        run: |
+          if [ "${{ matrix.config.r }}" \< "4.0.0" ]; then
             echo "EVALUATE_PKG=evaluate@0.23" >> $GITHUB_ENV
           else
             echo "EVALUATE_PKG=evaluate" >> $GITHUB_ENV
           fi
+        shell: bash
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
