--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -36,7 +36,6 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
-      _R_CHECK_FORCE_SUGGESTS_: false
 
     steps:
       - uses: actions/checkout@v4
@@ -48,10 +47,30 @@ jobs:
           r-version: ${{ matrix.config.r }}
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
+      
+      - name: Determine evaluate package version on Windows
+        if: runner.os == 'Windows'
+        run: |
+          if ($Env:MATRIX_CONFIG_R -lt "4.0.0") {
+            echo "EVALUATE_PKG=evaluate@0.23" >> $Env:GITHUB_ENV
+          } else {
+            echo "EVALUATE_PKG=evaluate" >> $Env:GITHUB_ENV
+           }
+        shell: pwsh
+        
+      - name: Determine evaluate package version on non-Windows
+        if: runner.os != 'Windows'
+        run: |
+          if [ "${{ matrix.config.r }}" \< "4.0.0" ]; then
+            echo "EVALUATE_PKG=evaluate@0.23" >> $GITHUB_ENV
+          else
+            echo "EVALUATE_PKG=evaluate" >> $GITHUB_ENV
+          fi
+        shell: bash
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::rcmdcheck, evaluate=?ignore-before-r=4.0.0
+          extra-packages: any::rcmdcheck, ${{ env.EVALUATE_PKG }}
           needs: check
 
 # do not build vignettes in github actions check and ignore warnings
@@ -63,8 +82,6 @@ jobs:
           check-dir: '"check"'
           upload-snapshots: false
           upload-results: false
-        env:
-          _R_CHECK_FORCE_SUGGESTS_: false
 
 # do not upload artifact until changing to public repo
 # When public repo -> uncomment below
