add spillover method for ldlt models

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -175,6 +175,8 @@ S3method(rmase,bvharcv)
 S3method(rmase,predbvhar)
 S3method(rmsfe,bvharcv)
 S3method(rmsfe,predbvhar)
+S3method(spillover,bvarldlt)
+S3method(spillover,bvharldlt)
 S3method(spillover,normaliw)
 S3method(spillover,olsmod)
 S3method(spne,bvharsp)
