add dynamic spillover for ldlt

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ S3method(conf_fscore,summary.bvharsp)
 S3method(conf_prec,summary.bvharsp)
 S3method(conf_recall,summary.bvharsp)
 S3method(confusion,summary.bvharsp)
+S3method(dynamic_spillover,ldltmod)
 S3method(dynamic_spillover,normaliw)
 S3method(dynamic_spillover,olsmod)
 S3method(dynamic_spillover,svmod)
