--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,7 @@ URL: https://ygeunkim.github.io/package/bvhar/, https://github.com/ygeunkim/bvha
 BugReports: https://github.com/ygeunkim/bvhar/issues
 Suggests: 
     covr,
+    GIGrvg,
     knitr,
     parallel,
     rmarkdown,
