--- a/NAMESPACE
+++ b/NAMESPACE
@@ -151,6 +151,7 @@ S3method(print,bvharsv)
 S3method(print,covspec)
 S3method(print,horseshoespec)
 S3method(print,interceptspec)
+S3method(print,ngspec)
 S3method(print,predbvhar)
 S3method(print,ssvsinit)
 S3method(print,ssvsinput)
@@ -244,6 +245,7 @@ export(is.covspec)
 export(is.horseshoespec)
 export(is.interceptspec)
 export(is.ldltspec)
+export(is.ngspec)
 export(is.predbvhar)
 export(is.ssvsinit)
 export(is.ssvsinput)
@@ -269,6 +271,7 @@ export(set_horseshoe)
 export(set_intercept)
 export(set_lambda)
 export(set_ldlt)
+export(set_ng)
 export(set_psi)
 export(set_ssvs)
 export(set_sv)
