add ci computing for ng prior

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -188,6 +188,7 @@ S3method(stableroot,bvharmn)
 S3method(stableroot,varlse)
 S3method(stableroot,vharlse)
 S3method(summary,hsmod)
+S3method(summary,ngmod)
 S3method(summary,normaliw)
 S3method(summary,ssvsmod)
 S3method(summary,varlse)
