add set dl function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -149,6 +149,7 @@ S3method(print,bvharspillover)
 S3method(print,bvharssvs)
 S3method(print,bvharsv)
 S3method(print,covspec)
+S3method(print,dlspec)
 S3method(print,horseshoespec)
 S3method(print,interceptspec)
 S3method(print,ngspec)
@@ -243,6 +244,7 @@ export(is.bvharmod)
 export(is.bvharpriorspec)
 export(is.bvharspec)
 export(is.covspec)
+export(is.dlspec)
 export(is.horseshoespec)
 export(is.interceptspec)
 export(is.ldltspec)
@@ -268,6 +270,7 @@ export(rmsfe)
 export(set_bvar)
 export(set_bvar_flat)
 export(set_bvhar)
+export(set_dl)
 export(set_horseshoe)
 export(set_intercept)
 export(set_lambda)
