--- a/python/environment.yml
+++ b/python/environment.yml
@@ -44,3 +44,34 @@ dependencies:
   - wheel=0.44.0
   - xz=5.2.6
   - zstd=1.5.6
+  - pip:
+      - annotated-types==0.7.0
+      - attrs==24.2.0
+      - beartype==0.18.5
+      - certifi==2024.7.4
+      - charset-normalizer==3.3.2
+      - click==8.1.7
+      - griffe==1.2.0
+      - idna==3.8
+      - importlib-metadata==8.4.0
+      - importlib-resources==6.4.4
+      - jsonschema==4.23.0
+      - jsonschema-specifications==2023.12.1
+      - markdown-it-py==3.0.0
+      - mdurl==0.1.2
+      - plum-dispatch==2.5.2
+      - pydantic==2.8.2
+      - pydantic-core==2.20.1
+      - pygments==2.18.0
+      - pyyaml==6.0.2
+      - quartodoc==0.7.6
+      - referencing==0.35.1
+      - requests==2.32.3
+      - rich==13.7.1
+      - rpds-py==0.20.0
+      - sphobjinv==2.3.1.1
+      - tabulate==0.9.0
+      - typing-extensions==4.12.2
+      - urllib3==2.2.2
+      - watchdog==4.0.2
+      - zipp==3.20.0
